[gd_scene load_steps=2 format=3 uid="uid://bupf61wjcvaho"]

[ext_resource type="Script" uid="uid://bpvq24n8h6n63" path="res://Scripts/grab_zone_component.gd" id="1_dd26o"]

[node name="GrabZone" type="Area2D"]
collision_layer = 0
script = ExtResource("1_dd26o")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
